# DDD_api_template

./: .gitignore  Makefile  README.md  pyproject.toml  start_app.sh  tox.ini
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
.github/actions/build_app/: action.yml
.github/workflows/: integration.yaml  linting.yaml  test.yaml  typing.yaml  unit.yaml
alembic/: env.py
app/: config.py  database.py  domains.py  endpoints.py  exceptions.py  main.py  managers.py  mappers.py  models.py  repository.py  schemas.py  service.py  session.py  unit_of_work.py
tests/integration/: conftest.py  test_entity_fields.py  test_integration_repositories.py  test_integration_service.py  test_integration_units_of_work.py
tests/integration/test_endpoints/: conftest.py  test_endpoints.py
tests/unit/: test_database.py  test_domains.py  test_mapper.py  test_models.py  test_repository.py  test_service.py  test_session.py  test_units_of_work.py
